@@ -1,0 +1,7 @@
+.comment
+  .avatar
+    = link_to(image_tag("1x1.gif", :size => "30x30", :style => "border: 1px silver solid;"), "#")
+  .body
+    = link_to comment.user.full_name, "mailto:" + comment.user.email
+    %tt= time_ago(comment.created_at)
+    %dt= comment.comment
