@@ -4,10 +4,13 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Feb 15, 2008
+---------------------------------------------------------------------
+- More work on posting notes for campaigns and other models.
 
 Sat, Feb 14, 2008
 ---------------------------------------------------------------------
-
+- More design work on campaign landing page (adding comments, etc.)
 
 Fri, Feb 13, 2008
 ---------------------------------------------------------------------
